--- a/art-quiz/src/styles.scss
+++ b/art-quiz/src/styles.scss
@@ -107,7 +107,7 @@ body {
 
     .container {
         background-color: #dbbebe73;
-        width: 360px;
+        width: 100%;
         height: 100vh;
         margin: 0 auto;
         background-image: url("./images/leftanglestripes.png");
@@ -150,17 +150,7 @@ body {
                 background-color: rgb(87, 87, 79);
                 padding: 20px;
                 cursor: pointer;
-
                 color: white;
-
-
-
-
-
-
-
-
-
             }
 
         }
@@ -184,7 +174,7 @@ body {
         padding: 20px 20px;
         width: 100%;
         background-image: url("./images/bottomStripes.png");
-        background-repeat: no-repeat;
+        background-repeat: repeat-x;
 
         ul {
             display: flex;
@@ -202,6 +192,87 @@ body {
                 font-size: 16px;
             }
         }
+    }
+
+    @media (min-width: 768px) {
+        .container {
+
+
+            background-size: auto;
+            background-position: left 300px bottom 620px;
+
+        }
+
+        header {
+            padding: 30px 30px;
+        }
+
+        h1 {
+            font-size: 60px;
+        }
+
+
+
+        footer {
+            padding: 30px 30px;
+
+            ul {
+
+                flex-direction: row;
+                width: 100%;
+                justify-content: space-between;
+
+                li {
+                    font-size: 20px;
+                }
+
+                a {
+                    font-size: 20px;
+                }
+            }
+        }
+    }
+
+    @media (min-width: 1024px) {
+        .container {
+
+
+            background-size: auto;
+            background-position: left 550px bottom 370px;
+
+        }
+
+        main {
+
+            padding: 30px;
+
+            ul {
+
+                flex-direction: row;
+
+                column-gap: 30px;
+
+                li {
+                    flex-grow: 1;
+
+
+                }
+
+            }
+        }
+
+    }
+
+    @media (min-width: 1920px) {
+        .container {
+
+            width: 1920px;
+            background-size: auto;
+            background-position: right -300px top 0;
+            background-repeat: repeat;
+            background: linear-gradient(90deg, rgba(7, 175, 218, 1) 20%, rgba(139, 195, 60, 1) 20%, rgba(139, 195, 60, 1) 40%, rgba(84, 99, 172, 1) 40%, rgba(84, 99, 172, 1) 60%, rgba(235, 12, 140, 1) 60%, rgba(235, 12, 140, 1) 80%, rgba(246, 143, 29, 1) 80%, rgba(246, 143, 29, 1) 99%);
+        }
+
     }
 
 }
