--- a/art-quiz/src/styles.scss
+++ b/art-quiz/src/styles.scss
@@ -138,7 +138,7 @@ body {
         align-items: center;
         padding: 20px;
 
-        ul {
+        .quiz-type {
             width: 100%;
             display: flex;
             flex-direction: column;
@@ -156,18 +156,71 @@ body {
         }
     }
 
-    .settings {
+    .settings-popup {
+        position: absolute;
+        display: none;
+        width: 320px;
+        height: 250px;
+        top: -200px;
+        left: -330px;
+        background-color: #57574f;
+        padding: 20px;
+
+        flex-direction: column;
+        justify-content: space-between;
+
+        h2 {
+            font-size: 25px;
+        }
+
+        h3 {
+            font-size: 16px;
+            text-align: left;
+        }
+
+        .settings-list {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+
+        }
+
+        .but-set-list {
+            display: flex;
+
+            justify-content: right;
+            column-gap: 20px;
+        }
+    }
+
+    .settings-position {
         position: absolute;
         bottom: 20px;
         right: 20px;
         border: none;
         background-color: transparent;
 
+
         img {
             width: 40px;
             height: 40px;
         }
+
+        #but-settings-open {
+            display: none;
+
+        }
+
+        label[for=but-settings-open] {
+            cursor: pointer;
+        }
     }
+
+    #but-settings-open:checked~.settings-popup {
+        display: flex;
+    }
+
 
     footer {
         background-color: #3636367a;
@@ -240,7 +293,7 @@ body {
 
             padding: 30px;
 
-            ul {
+            .quiz-type {
 
                 flex-direction: row;
 
